<resources>
    <string name="app_name">FB Post Clone</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="unblast">Unblast</string>
    <string name="_2_hrs">2 hrs</string>
    <string name="more_options">More Options</string>
    <string name="buckle_up_because_change_is_coming_to_wordpress">Buckle up, because change is coming to Wordpress</string>
    <string name="post_image">Post Image</string>
    <string name="_1_share">1 Share</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
</resources>