<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/page_profile_pic"
        android:layout_width="37dp"
        android:layout_height="37dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
            <androidx.cardview.widget.CardView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:cardCornerRadius="50dp"
                        android:layout_gravity="center">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/placeholder_img"
                            android:contentDescription="@string/user_profile_picture" />
            </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unblast"
        app:layout_constraintStart_toEndOf="@id/page_profile_pic"
        app:layout_constraintTop_toTopOf="@id/page_profile_pic"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_hrs"
            app:layout_constraintTop_toBottomOf="@id/page_title"
            app:layout_constraintStart_toStartOf="@id/page_title"
            />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/baseline_public_24"
                app:layout_constraintTop_toTopOf="@id/post_time"
                app:layout_constraintBottom_toBottomOf="@id/post_time"
                app:layout_constraintStart_toEndOf="@id/post_time"
                android:layout_marginStart="4dp"
                />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/more_options"
        style="@style/Widget.AppCompat.ActionButton"
        app:icon="@drawable/baseline_more_horiz_24"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/page_profile_pic"
        app:layout_constraintBottom_toBottomOf="@id/page_profile_pic"
        />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buckle_up_because_change_is_coming_to_wordpress"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/page_profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        />


    <ImageView
        android:id="@+id/post_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/placeholder_img"
        android:contentDescription="@string/post_image"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/post_reactions"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/post_img"
        app:layout_constraintStart_toStartOf="@id/post_img"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_thumb_up_off_alt_24"
                android:background="#4267B2"
                android:padding="4dp"
                />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/post_reactions"
        app:layout_constraintTop_toTopOf="@id/post_reactions"
        app:layout_constraintBottom_toBottomOf="@id/post_reactions"
        android:layout_marginStart="2dp"
        android:text="12"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/post_visible_to"
        app:layout_constraintTop_toTopOf="@id/post_reactions"
        app:layout_constraintBottom_toBottomOf="@id/post_reactions"
        android:layout_marginEnd="4dp"
        android:text="@string/_1_share"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/post_visible_to"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="@id/post_reactions"
        app:layout_constraintEnd_toStartOf="@id/visibility_options"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/placeholder_img"
                android:contentDescription="@string/user_profile_picture" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/visibility_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/more_options"
        style="@style/Widget.AppCompat.ActionButton"
        app:icon="@drawable/baseline_arrow_drop_down_24"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/post_reactions"
        app:layout_constraintBottom_toBottomOf="@id/post_reactions"
        android:layout_marginEnd="-8dp"
        />

    <Button
        android:id="@+id/like"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textColor="@color/black"
        app:icon="@drawable/baseline_thumb_up_off_alt_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_reactions"
        app:iconTint="@color/black"
         />

    <Button
        android:id="@+id/comment"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@color/black"
        app:icon="@drawable/baseline_mode_comment_24"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
         />
    <Button
        android:id="@+id/share"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        android:textColor="@color/black"
        app:icon="@drawable/baseline_share_24"
        app:iconTint="@color/black"
        android:text="@string/share"/>


</androidx.constraintlayout.widget.ConstraintLayout>